--- a/latex/rbffd_methods_content/rbftype_table.tex
+++ b/latex/rbffd_methods_content/rbftype_table.tex
@@ -1,5 +1,5 @@
 %Kansa collocation
-\newcommand{\kansaglobalrbf}[0]{\cite{Kansa1990a, Kansa1990b, Fasshauer2006, Fornberg2004, Mouat2002, Hon2001, Franke1982, Flyer2009b, Flyer2007, Hon1999, Fornberg2008, Larsson2003}}
+\newcommand{\kansaglobalrbf}[0]{\cite{Kansa1990a, Kansa1990b, Fasshauer2006, Fornberg2004, Mouat2002, Hon2001, Franke1982, FlyerWright09, FlyerWright07, Hon1999, Fornberg2008, Larsson2003}}
 \newcommand{\kansacsrbf}[0]{\cite{Fornberg2008, Wang2002}}
 \newcommand{\kansalocalrbf}[0]{\cite{Divo2007, Kosec2008, Sarler2006, Vertnik2006}}
 
@@ -17,7 +17,7 @@
 % RBF-FD
 \newcommand{\rbffdglobalrbf}[0]{N/A}
 \newcommand{\rbffdcsrbf}[0]{N/A}
-\newcommand{\rbffdlocalrbf}[0]{\cite{Wright2006,Wright2003, Shu2003, Cecil2004, Wright2004, Shu2006, Chandhini2007}}
+\newcommand{\rbffdlocalrbf}[0]{\cite{WrightFornberg06, Wright2003, Shu2003, Cecil2004, Wright2004, Shu2006, Chandhini2007}}
 
 
 %\begin{sidewaystable}
