--- a/latex/rbffd_avoid_pole_singularities.tex
+++ b/latex/rbffd_avoid_pole_singularities.tex
@@ -1,14 +1,14 @@
-\makeatletter
-\@ifundefined{standalonetrue}{\newif\ifstandalone}{}
-\@ifundefined{section}{\standalonetrue}{\standalonefalse}
-\makeatother
-\ifstandalone
-\documentclass{report}
-
-\input{all_usepackages} 
-
-\begin{document}
-\fi
+%\makeatletter
+%\@ifundefined{standalonetrue}{\newif\ifstandalone}{}
+%\@ifundefined{section}{\standalonetrue}{\standalonefalse}
+%\makeatother
+%\ifstandalone
+%\documentclass{report}
+%
+%\input{all_usepackages} 
+%
+%\begin{document}
+%\fi
 
 \chapter{Avoiding Pole Singularities with RBF-FD}
 This content follows \cite{FlyerWright07,FlyerWright09}. 
@@ -72,11 +72,11 @@ where now the system is completely free of singularities at the poles \cite{Flye
 We note that the expression $\cos{(\frac{\pi}{2})}$ evaluates on some systems to a very small number rather than zero (e.g., $6.1(10^{-17}$) on the Keeneland system with the GNU gcc compiler). The small value in turn allows $\frac{1}{\cos{\theta}}$ to evaluate to a large value (e.g., $1.6(10^{16})$) rather than ``inf" or ``NaN". A large value allows the cosine terms to cancel in double precision, whereas an ``inf'' or ``NaN'' would corrupt the numerics. Rather than avoid placing nodes at the poles, or assuming the machine will numerically cancel the singularities, it is preferred to use operators \ref{eq:dm_lambda}, \ref{eq:dm_theta} on the RHS of Equation~\ref{eq:rbffd_weight_system} to compute RBF-FD weights. 
 
 
-
-\ifstandalone
-\bibliographystyle{plain}
-\bibliography{merged_references}
-\end{document}
-\else
-\expandafter\endinput
-\fi
+%
+%\ifstandalone
+%\bibliographystyle{plain}
+%\bibliography{merged_references}
+%\end{document}
+%\else
+%\expandafter\endinput
+%\fi
